@@ -1,5 +1,9 @@
 2003-05-13  Matti Aarnio  <mea@zmailer.org>
 
+	* transports/smtp/smtptls.c:
+	    Oops, when "HAVE_OPENSSL" is inactive, still supply
+	    msg_info() function to be used, as well as  FILE *vlog.
+
 	* libc/strsignal.c:
 	    Matching tests with earlier autoconf rewrites
 
